[gd_scene load_steps=16 format=3 uid="uid://d1lm50b8vcvxp"]

[ext_resource type="Script" path="res://logic/ui/unit_stats.gd" id="1_hgwin"]
[ext_resource type="Texture2D" uid="uid://cfmrtf5kiwoi5" path="res://assets/images/game/tilemap2.png" id="4_87mqm"]
[ext_resource type="Script" path="res://logic/ui/unit_stats_stars.gd" id="5_xxewy"]
[ext_resource type="Texture2D" uid="uid://b4pxuxb2m8ko8" path="res://assets/images/game/tilemap_packed.png" id="6_7v8pe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1t4ew"]
atlas = ExtResource("6_7v8pe")
region = Rect2(448, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xxxj"]
atlas = ExtResource("6_7v8pe")
region = Rect2(416, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xnc4"]
atlas = ExtResource("6_7v8pe")
region = Rect2(352, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4ita"]
atlas = ExtResource("6_7v8pe")
region = Rect2(384, 320, 32, 32)

[sub_resource type="Animation" id="Animation_o5odx"]
resource_name = "AmmoBlink"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AmmoIcon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_go8st"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AmmoIcon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_82hqu"]
_data = {
"AmmoBlink": SubResource("Animation_o5odx"),
"RESET": SubResource("Animation_go8st")
}

[sub_resource type="Animation" id="Animation_tsv3k"]
resource_name = "FuelBlink"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FuelIcon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_0u2uw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FuelIcon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oimnt"]
_data = {
"FuelBlink": SubResource("Animation_tsv3k"),
"RESET": SubResource("Animation_0u2uw")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_kh8bx"]
atlas = ExtResource("4_87mqm")
region = Rect2(448, 288, 32, 32)

[node name="UnitStats" type="Node2D"]
script = ExtResource("1_hgwin")

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.835294)
z_index = 1
position = Vector2(0, 1)

[node name="Control" type="Control" parent="Sprite"]
layout_direction = 1
layout_mode = 3
anchors_preset = 0
mouse_filter = 2

[node name="Health" type="Label" parent="Sprite/Control"]
unique_name_in_owner = true
auto_translate_mode = 2
visible = false
layout_mode = 1
offset_left = 5.0
offset_top = 2.0
offset_right = 17.0
offset_bottom = 17.0
localize_numeral_system = false
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "10"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="CaptureIcon" type="TextureRect" parent="Sprite/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -18.0
offset_top = 2.0
offset_right = 14.0
offset_bottom = 34.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_1t4ew")

[node name="CarryingIcon" type="TextureRect" parent="Sprite/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -18.0
offset_top = 2.0
offset_right = 14.0
offset_bottom = 34.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_1xxxj")

[node name="AmmoIcon" type="TextureRect" parent="Sprite/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = -14.0
offset_right = 34.0
offset_bottom = 18.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_0xnc4")

[node name="FuelIcon" type="TextureRect" parent="Sprite/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -18.0
offset_top = -12.0
offset_right = 14.0
offset_bottom = 20.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_h4ita")

[node name="AnimationAmmo" type="AnimationPlayer" parent="Sprite/Control"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_82hqu")
}

[node name="AnimationFuel" type="AnimationPlayer" parent="Sprite/Control"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_oimnt")
}

[node name="Stars" type="Control" parent="Sprite/Control" node_paths=PackedStringArray("stars")]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = -10.0
offset_top = -12.0
offset_right = 10.0
offset_bottom = 10.0
mouse_filter = 2
script = ExtResource("5_xxewy")
stars = [NodePath("1"), NodePath("2"), NodePath("3"), NodePath("4"), NodePath("5")]

[node name="1" type="TextureRect" parent="Sprite/Control/Stars"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.136364
anchor_right = 0.05
anchor_bottom = 0.136364
offset_left = -9.0
offset_top = -16.0
offset_right = 23.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = SubResource("AtlasTexture_kh8bx")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="2" type="TextureRect" parent="Sprite/Control/Stars"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.136364
anchor_bottom = 0.136364
offset_left = -2.0
offset_top = -16.0
offset_right = 30.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = SubResource("AtlasTexture_kh8bx")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="3" type="TextureRect" parent="Sprite/Control/Stars"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.136364
anchor_bottom = 0.136364
offset_left = 4.0
offset_top = -16.0
offset_right = 36.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = SubResource("AtlasTexture_kh8bx")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="4" type="TextureRect" parent="Sprite/Control/Stars"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.136364
anchor_bottom = 0.136364
offset_left = 10.0
offset_top = -16.0
offset_right = 42.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = SubResource("AtlasTexture_kh8bx")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="5" type="TextureRect" parent="Sprite/Control/Stars"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.136364
anchor_bottom = 0.136364
offset_left = 16.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = SubResource("AtlasTexture_kh8bx")
stretch_mode = 1
metadata/_edit_use_anchors_ = true
